Tweak for publish to web of first finished version.

--- a/web/daftclass.html
+++ b/web/daftclass.html
@@ -20,8 +20,9 @@
         <ul>
         <li>This web page produces a simple skeleton <a href="http://dartlang.org">Dart</a> class to get your awesome idea
          underway! </li>
+         <li>Enter a Class name, properties and methods (separate with a space).</li>
          <li>Copy and Paste into your favourite IDE when finished.</li>
-         <li>Visit my blog about Dart <a href=""></a></li>
+         <li>Visit my blog about Dart <a href="http://divingintodart.blogspot.co.uk/">Diving Into Dart</a></li>
         </ul>
       
       </div>
