Changed the Title Tag entry.

--- a/web/daftclass.html
+++ b/web/daftclass.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sample app</title>
+    <title>Dartclass - Skeleton Class Generator</title>
     <link rel="stylesheet" href="daftclass.css">
     <link rel="import" href="classcreator.html">  
   </head>
